Put string literal types in separate modules
Now we can have types for individual classes.

--- a/templates/def-string-literal-types.liquid
+++ b/templates/def-string-literal-types.liquid
@@ -1,3 +1,4 @@
+export module {{ currentClass.friendlyName | camel_case | capitalize }} {
 {% for propertyVals in currentClass.propertyValues %}{%
     assign type = '' %}{%
     for propVal in propertyVals.values %}{%
@@ -6,5 +7,6 @@
         assign type = type | append: "' " %}{%
     endfor %}{%
     assign type = type | trim | replace: ' ', ' | ' %}
-export type {{ propertyVals.propertyName | camel_case | capitalize }}Value = {{ type }};{%
+    export type {{ propertyVals.propertyName | camel_case | capitalize }}Value = {{ type }};{%
 endfor %}
+}
