--- a/templates/connect-super-call.liquid
+++ b/templates/connect-super-call.liquid
@@ -1,3 +1,3 @@
 {% assign conventionRegex = currentClass.systemDeviceNameConvention | replace: '\{\d\}', '(\\d*)'
  %}{% assign paramLength = extraParams | size
- %}        super('{{currentClass.systemClassName}}', '{{conventionRegex}}'{% if paramLength > 0 %}, {{extraParams}}{% endif %});
+ %}        super('{{currentClass.systemClassName}}', {% if omitNameConvention %}null{% else %}'{{conventionRegex}}'{% endif %}{% if paramLength > 0 %}, {{extraParams}}{% endif %});
